refactor: change .env.template

--- a/backend/backend-cloud-auth/.env.template
+++ b/backend/backend-cloud-auth/.env.template
@@ -2,10 +2,9 @@
 CLERK_FRONTEND_API_URL=
 CLERK_BACKEND_API_URL=
 
-# Supabase
-DATABASE_URL=
-SUPABASE_HOST=
-SUPABASE_NAME=
-SUPABASE_PORT=
-SUPABASE_USER=
-SUPABASE_PASSWORD=
+# Use docker container mysql
+MYSQL_HOST=
+MYSQL_PORT=
+MYSQL_USER=
+MYSQL_PASSWORD=
+MYSQL_DATABASE=
