--- a/backend/backend-cloud-post-song/docker-compose.yml
+++ b/backend/backend-cloud-post-song/docker-compose.yml
@@ -1,20 +1,38 @@
-version: '3.9'
-
 services:
-  postgres:
-    image: postgres:15-alpine
-    container_name: posts-postgres-dev
-    env_file: .env
-    ports:
-      - '5432:5432'
-    volumes:
-      - postgres_data_dev:/var/lib/postgresql/data
-    networks:
-      - backend
 
-volumes:
-  postgres_data_dev:
+  db:
+    image: postgres:17
+    container_name: api-song-db
+    restart: always
+    environment:
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB: ${POSTGRES_DB} 
+    ports:
+      - "5432:5432"  
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+    networks:
+      - app-network
+    env_file:
+      - .env
+
+
+  api-song:
+    build: .
+    restart: unless-stopped
+    container_name: api-song
+    depends_on:
+      - db
+    ports:
+      - "8001:8001"  
+    volumes:
+      - .:/app
 
 networks:
-  backend:
+  app-network:
     driver: bridge
+
+volumes:
+  postgres_data:
+    driver: local
