--- a/backend/backend-cloud-post-song/package.json
+++ b/backend/backend-cloud-post-song/package.json
@@ -27,6 +27,7 @@
     "typeorm:revert": "typeorm migration:revert"
   },
   "dependencies": {
+    "@nestjs/axios": "^4.0.0",
     "@nestjs/common": "^11.1.0",
     "@nestjs/core": "^11.1.0",
     "@nestjs/mapped-types": "*",
