--- a/backend/backend-cloud-auth/pyproject.toml
+++ b/backend/backend-cloud-auth/pyproject.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 description = ""
 authors = ["Alexander Morales Panitz <alexander@moralespanitz.com>"]
 readme = "README.md"
+package-mode = false
 
 [tool.poetry.dependencies]
 python = "^3.12"
@@ -18,6 +19,7 @@ requests = "^2.32.3"
 cryptography = "^42.0.8"
 pytz = "^2024.1"
 mysqlclient = "^2.2.7"
+drf-yasg = "^1.21.10"
 
 
 [build-system]
