--- a/backend/gateway/.env
+++ b/backend/gateway/.env
@@ -1,2 +1,5 @@
-API_URL=http://localhost:8001
-HILOS_API_URL=http://localhost:8002/api
+#API_URL=http://localhost:8001
+#HILOS_API_URL=http://localhost:8002/api
+
+API_URL=http://nest-api:3000
+HILOS_API_URL=http://spring-api-hilos:8080/api
