--- a/backend/gateway/Dockerfile
+++ b/backend/gateway/Dockerfile
@@ -1,6 +1,12 @@
 FROM node:18
+
 WORKDIR /app
+
 COPY package*.json ./
 RUN npm install
+
 COPY . .
-CMD ["node", "index.js"]
+
+EXPOSE 4000
+
+CMD ["npm", "run", "start"]
