--- a/backend/backend-cloud-auth/docker-compose.yml
+++ b/backend/backend-cloud-auth/docker-compose.yml
@@ -2,11 +2,13 @@
 services:
   db:
     image: mysql:8.0
+    container_name: mysql-auth
     environment:
       MYSQL_ROOT_PASSWORD: root
       MYSQL_DATABASE: test
       MYSQL_USER: root
       MYSQL_PASSWORD: password
+
     ports:
       - "3306:3306"
     volumes:
@@ -19,13 +21,15 @@ services:
       - .:/app
     ports:
       - "8000:8000"
+    env_file:
+      - .env
     depends_on:
       - db
     environment:
       DATABASE_ENGINE: django.db.backends.mysql
-      DATABASE_NAME: your_django_database
-      DATABASE_USER: your_django_user
-      DATABASE_PASSWORD: your_django_password
+      DATABASE_NAME: test
+      DATABASE_USER: root
+      DATABASE_PASSWORD: root
       DATABASE_HOST: db
       DATABASE_PORT: 3306
 
