--- a/backend/gateway/.env
+++ b/backend/gateway/.env
@@ -1,5 +1,7 @@
-#API_URL=http://localhost:8001
-#HILOS_API_URL=http://localhost:8002/api
+API_URL=http://localhost:8001
+HILOS_API_URL=http://localhost:8002/api
+AUTH_API_URL=http://localhost:8000/api
 
-API_URL=http://host.docker.internal:8001
-HILOS_API_URL=http://host.docker.internal:8002/api
+#API_URL=http://host.docker.internal:8001
+#HILOS_API_URL=http://host.docker.internal:8002/api
+
