--- a/backend/backend-cloud-auth/docker-compose.yml
+++ b/backend/backend-cloud-auth/docker-compose.yml
@@ -5,6 +5,7 @@ services:
     environment:
       MYSQL_ROOT_PASSWORD: password
       MYSQL_DATABASE: test
+      MYSQL_ROOT_HOST: '%'
     ports:
       - "3306:3306"
     volumes:
