feat: mongo database fake data inserted

--- a/backend/ingest/.env
+++ b/backend/ingest/.env
@@ -1,7 +1,6 @@
 # MongoDB
-MONGO_INITDB_ROOT_USERNAME=admin
-MONGO_INITDB_ROOT_PASSWORD=admin123
-MONGO_INITDB_DATABASE=historialdb
+MONGO_URI=mongodb://admin:admin123@localhost:27017/
+MONGO_DATABASE=historialdb
 
 # MySQL
 MYSQL_ROOT_PASSWORD=password
