--- a/backend/ingest/.env
+++ b/backend/ingest/.env
@@ -21,7 +21,7 @@ DATABASE_PORT=3306
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
 POSTGRES_DB=postgres_db
-POSTGRES_HOST=host.docker.internal  
+POSTGRES_HOST=localhost
 POSTGRES_PORT=5432
 PORT=8001
 SPRING_URL=http://api-students:8080
