--- a/backend/backend-cloud-post-song/docker-compose.yml
+++ b/backend/backend-cloud-post-song/docker-compose.yml
@@ -3,11 +3,11 @@ services:
     image: postgres:latest
     container_name: postgres
     environment:
-      POSTGRES_USER: ${POSTGRES_USER}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-      POSTGRES_DB: ${POSTGRES_DB}
-      POSTGRES_HOST: ${POSTGRES_HOST}
-      POSTGRES_PORT: ${POSTGRES_PORT}
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: postgres_db
+      POSTGRES_HOST: localhost
+      POSTGRES_PORT: 5432
     ports:
       - "5432:5432"
     volumes:
@@ -20,12 +20,16 @@ services:
     restart: unless-stopped
     ports:
       - "8001:8001"
-    env_file:
-      - .env
-    extra_hosts:
-      - "host.docker.internal:host-gateway"   # disponible en Docker ≥ 20.10  :contentReference[oaicite:1]{index=1}
     environment:
-      SPRING_URL: http://api-students:8080   # <- hostname del otro servicio
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: postgres_db
+      POSTGRES_HOST: localhost
+      POSTGRES_PORT: 5432
+      PORT: 8001
+      SPRING_URL: http://api-students:8080
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
     networks: [backend]
     depends_on:
       - postgres
@@ -35,4 +39,4 @@ volumes:
 
 networks:
   backend:
-    external: true               #
+    external: true
