feat: update env files for ingesta

--- a/backend/ingest/.env
+++ b/backend/ingest/.env
@@ -1,15 +1,11 @@
-# MongoDB
-MONGO_URI=mongodb://admin:admin123@localhost:27017/
-MONGO_DATABASE=historialdb
-
-# MySQL
+# MySQL Auth Service Configuration
 MYSQL_ROOT_PASSWORD=password
-MYSQL_DATABASE= test
+MYSQL_DATABASE=test
+MYSQL_ROOT_HOST=%
 MYSQL_HOST=localhost
 MYSQL_USER=root
 MYSQL_PASSWORD=password
 MYSQL_DB=test
-
 DATABASE_ENGINE=django.db.backends.mysql
 DATABASE_NAME=test
 DATABASE_USER=root
@@ -17,7 +13,7 @@ DATABASE_PASSWORD=password
 DATABASE_HOST=db
 DATABASE_PORT=3306
 
-# Postgres
+# PostgreSQL Song Service Configuration
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
 POSTGRES_DB=postgres_db
@@ -25,3 +21,17 @@ POSTGRES_HOST=localhost
 POSTGRES_PORT=5432
 PORT=8001
 SPRING_URL=http://api-students:8080
+
+# MongoDB Tweet Service Configuration
+MONGO_INITDB_ROOT_USERNAME=admin
+MONGO_INITDB_ROOT_PASSWORD=admin123
+MONGO_INITDB_DATABASE=historialdb
+MONGO_URI=mongodb://admin:admin123@localhost:27017/
+MONGO_DATABASE=historialdb
+
+SERVER_PORT=8080
+SPRING_APPLICATION_NAME=backend-cloud-twit
+SPRING_DATA_MONGODB_URI=mongodb://admin:admin123@mongo:27017/historialdb?authSource=admin
+SPRING_DATA_MONGODB_DATABASE=historialdb
+SPRINGDOC_API-DOCS_PATH=/api-docs
+SPRINGDOC_SWAGGER-UI_PATH=/api
