--- a/backend/backend-cloud-auth/docker-compose.yml
+++ b/backend/backend-cloud-auth/docker-compose.yml
@@ -1,16 +1,5 @@
 services:
-  db:
-    image: mysql:8.0
-    container_name: mysql-auth
-    environment:
-      MYSQL_ROOT_PASSWORD: password
-      MYSQL_DATABASE: test
-      MYSQL_ROOT_HOST: '%'
-    ports:
-      - "3307:3306"
-    volumes:
-      - db_data:/var/lib/mysql
-
+  
   web:
     build: .
     command: ["./wait-for-it.sh", "db:3306", "--", "sh", "-c", "python manage.py migrate && python manage.py runserver 0.0.0.0:8000"]
@@ -25,7 +14,7 @@ services:
       DATABASE_NAME: test
       DATABASE_USER: root
       DATABASE_PASSWORD: password
-      DATABASE_HOST: db
+      DATABASE_HOST: 172.31.28.220        
       DATABASE_PORT: 3306
 
 volumes:
