--- a/backend/backend-cloud-twit/src/main/resources/application.properties
+++ b/backend/backend-cloud-twit/src/main/resources/application.properties
@@ -1,5 +1,9 @@
 spring.application.name=backend-cloud-twit
-spring.data.mongodb.uri=mongodb://admin:admin123@localhost:27017/historialdb?authSource=admin
+
+# Conexión al Mongo externo (MV MongoDB)
+spring.data.mongodb.uri=mongodb://admin:admin123@172.31.29.139:27017/historialdb?authSource=admin
 spring.data.mongodb.database=historialdb
+
+# Documentación OpenAPI
 springdoc.api-docs.path=/api-docs
 springdoc.swagger-ui.path=/swagger-ui.html
