--- a/backend/system-design/containers/requirements.txt
+++ b/backend/system-design/containers/requirements.txt
@@ -1,5 +1,49 @@
-mysql-connector-python==8.0.33
-psycopg2-binary==2.9.9
-pymongo==4.6.1
-pandas==2.1.4 
-boto3==1.35.10
+appnope==0.1.4
+asttokens==3.0.0
+boto3==1.38.13
+botocore==1.38.13
+comm==0.2.2
+debugpy==1.8.14
+decorator==5.2.1
+dnspython==2.7.0
+dotenv==0.9.9
+executing==2.2.0
+Faker==37.1.0
+ipykernel==6.29.5
+ipython==9.2.0
+ipython_pygments_lexers==1.1.1
+jedi==0.19.2
+jmespath==1.0.1
+jupyter_client==8.6.3
+jupyter_core==5.7.2
+matplotlib-inline==0.1.7
+mysql-connector==2.2.9
+nest-asyncio==1.6.0
+numpy==2.2.5
+packaging==25.0
+pandas==2.2.3
+parso==0.8.4
+pexpect==4.9.0
+platformdirs==4.3.8
+prompt_toolkit==3.0.51
+psutil==7.0.0
+psycopg2-binary==2.9.10
+ptyprocess==0.7.0
+pure_eval==0.2.3
+Pygments==2.19.1
+pymongo==4.12.1
+PyMySQL==1.1.1
+python-dateutil==2.9.0.post0
+python-dotenv==1.1.0
+pytz==2025.2
+pyzmq==26.4.0
+s3transfer==0.12.0
+six==1.17.0
+SQLAlchemy==2.0.40
+stack-data==0.6.3
+tornado==6.4.2
+traitlets==5.14.3
+typing_extensions==4.13.2
+tzdata==2025.2
+urllib3==2.4.0
+wcwidth==0.2.13
