--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@apollo/client": "^3.13.8",
+    "@clerk/clerk-react": "^5.31.2",
     "bootstrap": "^5.3.5",
     "framer-motion": "^12.10.0",
     "lucide-react": "^0.507.0",
