--- a/backend/gateway/.env
+++ b/backend/gateway/.env
@@ -1,6 +1,4 @@
-API_URL=http://localhost:8001
-HILOS_API_URL=http://localhost:8002/api
-AUTH_API_URL=http://localhost:8000/api
+API_URL=http://172.31.81.36:8001
+HILOS_API_URL=http://172.31.81.36:8002/api
+AUTH_API_URL=http://172.31.81.36:8000/api
 
-#API_URL=http://host.docker.internal:8001
-#HILOS_API_URL=http://host.docker.internal:8002/api
