--- a/backend/backend-cloud-auth/docker-compose.yml
+++ b/backend/backend-cloud-auth/docker-compose.yml
@@ -1,16 +1,4 @@
 services:
-  db:
-    image: mysql:8.0
-    container_name: mysql-auth
-    environment:
-      MYSQL_ROOT_PASSWORD: password
-      MYSQL_DATABASE: test
-      MYSQL_ROOT_HOST: '%'
-    ports:
-      - "3307:3306"
-    volumes:
-      - db_data:/var/lib/mysql
-
   web:
     build: .
     command: ["./wait-for-it.sh", "db:3306", "--", "sh", "-c", "python manage.py migrate && python manage.py runserver 0.0.0.0:8000"]
@@ -18,15 +6,13 @@ services:
       - .:/app
     ports:
       - "8000:8000"
-    depends_on:
-      - db
     environment:
       DATABASE_ENGINE: django.db.backends.mysql
       DATABASE_NAME: test
       DATABASE_USER: root
       DATABASE_PASSWORD: password
-      DATABASE_HOST: db
-      DATABASE_PORT: 3306
+      DATABASE_HOST: 172.31.70.18
+      DATABASE_PORT: 3307
 
 volumes:
   db_data:
