--- a/backend/backend-cloud-post-song/docker-compose.yml
+++ b/backend/backend-cloud-post-song/docker-compose.yml
@@ -23,7 +23,7 @@ services:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
       POSTGRES_DB: postgres_db
-      POSTGRES_HOST: postgres
+      POSTGRES_HOST: 172.31.57.24
       POSTGRES_PORT: 5432
       PORT: 8001
       SPRING_URL: http://api-students:8080
