--- a/backend/backend-cloud-twit/compose.yml
+++ b/backend/backend-cloud-twit/compose.yml
@@ -20,14 +20,14 @@ services:
     build: .                             # tu Dockerfile
     container_name: api-students
     restart: unless-stopped
-    depends_on:
-      - mongo
+      #depends_on:
+      #- mongo
     ports:
       - "8002:8080"                      # host:container
     environment:
       SERVER_PORT: 8080                
       SPRING_APPLICATION_NAME: backend-cloud-twit
-      SPRING_DATA_MONGODB_URI: mongodb://admin:admin123@mongo:27017/historialdb?authSource=admin
+      SPRING_DATA_MONGODB_URI: mongodb://admin:admin123@172.31.31.14:27017/historialdb?authSource=admin
       SPRING_DATA_MONGODB_DATABASE: historialdb
       SPRINGDOC_API-DOCS_PATH: /api-docs
       SPRINGDOC_SWAGGER-UI_PATH: /api
